--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-emerald-950 text-white flex items-center justify-center min-h-screen p-4">
-  <div class="w-full bg-black text-black rounded-2xl shadow p-12 space-y-6">
+  <div class="max-w-4xl w-full bg-black text-black rounded-2xl shadow p-12 space-y-6">
     <h1 class="text-3xl font-bold text-center text-white">Find Your Next Read</h1>
 
     <!-- Questions -->
