--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body class="bg-emerald-950 text-white flex items-center justify-center min-h-screen p-4">
   <div class="max-w-4xl w-full bg-black text-black rounded-2xl shadow p-12 space-y-6">
-    <h1 class="text-3xl font-bold text-center text-white">Find Your Next Read</h1>
+    <div class="flex items-center space-x-4">
+      <!-- Logo on the left -->
+      <img src="logo.jpg" alt="Logo" class="w-16 h-16 rounded-lg object-cover" />
+  
+      <!-- Title on the right -->
+      <h1 class="text-3xl font-bold text-white">Find Your Next Read</h1>
+    </div>
 
     <!-- Questions -->
     <div id="quiz" class="space-y-6">
